--- a/android-app/src/main/res/values/strings.xml
+++ b/android-app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Instalytics</string>
+    <string name="home_insight">Insights</string>
+    <string name="home_search">Search</string>
+    <string name="home_profile">Profile</string>
+    <string name="profile_open_profile">Open profile</string>
+    <string name="profile_share_profile">Share profile</string>
+    <string name="profile_content_type_posts">Posts</string>
 </resources>
